# compiler

./: CMakeLists.txt  LICENSE  compiler_planning.md  gui_sketch.excalidraw  museum.md  planning.md
src/: CompilationFlowWindow.cpp  CompilationFlowWindow.hpp  CompilerTestsWindow.cpp  CompilerTestsWindow.hpp  DirectoryPicker.cpp  DirectoryPicker.hpp  FilePicker.cpp  FilePicker.hpp  MainWindow.cpp  MainWindow.hpp  StartWindow.cpp  StartWindow.hpp  main.cpp  populateCommonMenuBar.cpp  populateCommonMenuBar.hpp  primitives.hpp  util.cpp  util.hpp
tests/: compiler.csv
